--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -1,7 +1,7 @@
 .projects {
   display: flex;
   flex-direction: column;
-  gap: 93px;
+  gap: 60px;
 }
 .projects__h1 {
 }
@@ -20,8 +20,11 @@
   width: 400px;
   height: 600px;
   border-radius: 50px 0px;
-  box-shadow: 0px 0px 12px 0px #fff;
+  transition: 0.2s;
 }
 .project-item__image {
   width: 100%;
+}
+.project-item:hover {
+  box-shadow: 0px 0px 12px 0px #fff;
 }
