--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,7 @@
+/* :root - корневой элемент сайта, считай, что выше html, в нем указываем переменные, которые потом можно использовать */
 :root {
   --back-main: #0f1624;
+  /* Градиентный цвет, используется в нескольких местах */
   --gradient-tech: linear-gradient(
     270deg,
     #13adc7 0%,
