--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -1,24 +1,40 @@
+/* Здесь начальная нормализация стилей, чтобы во всех браузерах отображалось одинаково
+Так как браузеры имеют собственные встроенные стили
+*/
+/* Обращаемся ко всем тегам через * */
 * {
+  /* Размер блоков учитывает ширину границы */
   box-sizing: border-box;
+  /* Убираем отступы */
   margin: 0;
   padding: 0;
+  /* Задаем всем элементам один шрифт, чтобы не повторяться */
   font-family: Poppins;
 }
+/* Ширина и высота всей страницы 100% от ширины и высоты устройства */
 html {
   width: 100%;
   height: 100%;
 }
 body {
+  /* Задаем фон */
   background-color: var(--back-main);
+  /* С помощью следующих 3х свойств делаем так, чтобы header main footer 
+  растягивались по всей высоте сайта
+  */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  /* Та же история, что и у html */
   width: 100%;
   height: 100%;
 }
+/* Задаем тегу а отсутствие подчеркивания */
 a {
   text-decoration: none;
 }
+/* Для текстовых тегов указываем стили, которые дублируются */
 h1,
 h2,
 h3,
@@ -27,21 +43,19 @@ p {
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-}
-h1 {
   color: var(--text-main);
+}
+/* Настраиваем отдельно размеры */
+h1 {
   font-size: 48px;
 }
 h2 {
-  color: var(--text-main);
   font-size: 24px;
-  line-height: normal;
 }
 p {
-  color: var(--text-main);
   font-size: 20px;
-  line-height: normal;
 }
+/* Кнопке также задаем высоту, фон, закругление, убираем границу  */
 button {
   background: var(--gradient-tech);
   height: 60px;
@@ -50,21 +64,26 @@ button {
   font-size: 20px;
   color: var(--text-main);
   padding: 0 60px;
+  /* Свойство, чтобы менялся курсор на указатель */
   cursor: pointer;
 }
 
 ul,
 li {
+  /* Убираем стиль оформления списка, чтобы точек не было */
   list-style: none;
 }
 main {
   display: flex;
   flex-direction: column;
+  /* Расстояние между секция в main */
   gap: 100px;
+  /* Отступ всерху и снизу */
   padding-top: 100px;
   padding-bottom: 100px;
 }
 hr {
+  /* Настраиваем линию */
   width: 300px;
   background: var(--gradient-tech);
   height: 2px;
@@ -72,6 +91,7 @@ hr {
 }
 
 .container {
+  /* Дополнительный класс для обозначения отступов слева и справа от краев страницы */
   padding-left: 130px;
   padding-right: 130px;
 }
