--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -6,7 +6,7 @@
 }
 .projects-list {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 30px;
   padding: 0 100px;
 }
@@ -16,8 +16,8 @@
   flex-direction: column;
   padding: 25px;
   justify-content: space-between;
-  width: 400px;
-  height: 600px;
+  width: 300px;
+  height: 500px;
   border-radius: 50px 0px;
   border: 1px solid rgba(255, 255, 255, 0.1);
   transition: 0.2s;
