--- a/assets/css/technology.css
+++ b/assets/css/technology.css
@@ -42,3 +42,8 @@
 .technology-item:hover > .technology-item__bottom {
   box-shadow: 0px 0px 14px 3px rgba(49, 238, 255, 0.523);
 }
+@media (max-width: 768px) {
+  .technology-list {
+    padding: 0 20px;
+  }
+}
