--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -8,9 +8,13 @@
   display: flex;
   justify-content: space-between;
 }
-.about-timeline {
+.about__block-timeline {
   position: absolute;
   top: 55px;
+  width: 100%;
+  padding: 0 105px;
+}
+.about-timeline {
   width: 100%;
   height: 10px;
   border-radius: 20px;
