--- a/assets/css/burger.css
+++ b/assets/css/burger.css
@@ -15,7 +15,9 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-  position: relative;
+  position: fixed;
+  top: 20px;
+  right: 20px;
   height: 20px;
   z-index: 99;
   width: 20px;
@@ -29,12 +31,19 @@
   content: "";
 }
 .menu-box {
-  display: none;
+  position: fixed;
+  top: 0;
+  right: -100%;
   height: 100%;
   width: 100%;
   max-width: 375px;
-  background-color: white;
+  background-color: rgb(142, 150, 214);
+  z-index: 10;
+  transition: 1s;
+}
+#menu-check {
+  display: none;
 }
 #menu-check:checked ~ .menu-box {
-  display: block;
+  right: 0;
 }
