--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -30,6 +30,11 @@ body {
   width: 100%;
   height: 100%;
 }
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
 /* Задаем тегу а отсутствие подчеркивания */
 a {
   text-decoration: none;
