--- a/assets/css/burger.css
+++ b/assets/css/burger.css
@@ -1,7 +1,7 @@
-.menu-burger {
-}
-#menu-check {
-}
+.menu-burger {}
+
+#menu-check {}
+
 .menu-label span,
 .menu-label span::after,
 .menu-label span::before {
@@ -11,25 +11,29 @@
   display: block;
   position: relative;
 }
+
 .menu-label {
   display: flex;
   align-items: center;
   cursor: pointer;
   position: fixed;
   top: 20px;
-  right: 20px;
+  right: 40px;
   height: 20px;
   z-index: 99;
   width: 20px;
 }
+
 .menu-label span::after {
   top: 5px;
   content: "";
 }
+
 .menu-label span::before {
   top: -8px;
   content: "";
 }
+
 .menu-box {
   position: fixed;
   top: 0;
@@ -39,11 +43,13 @@
   max-width: 375px;
   background-color: rgb(142, 150, 214);
   z-index: 10;
-  transition: 1s;
+  transition: 0.5s;
 }
+
 #menu-check {
   display: none;
 }
-#menu-check:checked ~ .menu-box {
+
+#menu-check:checked~.menu-box {
   right: 0;
 }
