--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -11,11 +11,14 @@
   /* Задаем всем элементам один шрифт, чтобы не повторяться */
   font-family: Poppins;
 }
+
 /* Ширина и высота всей страницы 100% от ширины и высоты устройства */
 html {
   width: 100%;
-  height: 100%;
+  /* Нужно для прокрутки наверх */
+  overflow: auto;
 }
+
 body {
   /* Задаем фон */
   background-color: var(--back-main);
@@ -30,16 +33,20 @@ body {
   width: 100%;
   height: 100%;
 }
+
 html,
 body {
+  /* ограничиваем ширину размером окна */
   max-width: 100vw;
-  overflow-x: hidden;
+
 }
+
 /* Задаем тегу а отсутствие подчеркивания */
 a {
   text-decoration: none;
   color: inherit;
 }
+
 /* Для текстовых тегов указываем стили, которые дублируются */
 h1,
 h2,
@@ -52,16 +59,20 @@ a {
   line-height: normal;
   color: var(--text-main);
 }
+
 /* Настраиваем отдельно размеры */
 h1 {
   font-size: 32px;
 }
+
 h2 {
   font-size: 20px;
 }
+
 p {
   font-size: 18px;
 }
+
 /* Кнопке также задаем высоту, фон, закругление, убираем границу  */
 button {
   background: var(--gradient-tech);
@@ -75,13 +86,16 @@ button {
   cursor: pointer;
   transition: 0.3s;
 }
+
 button:hover {
   transform: scale(1.1);
 }
+
 button:active {
   transform: scale(1);
   transition: 0.1s;
 }
+
 ul,
 li {
   /* Убираем стиль оформления списка, чтобы точек не было */
@@ -98,6 +112,7 @@ main {
   padding-top: 100px;
   padding-bottom: 100px;
 }
+
 hr {
   /* Настраиваем линию */
   width: 60%;
@@ -111,6 +126,7 @@ hr {
   padding-left: calc((100vw - 1180px) / 2);
   padding-right: calc((100vw - 1180px) / 2);
 }
+
 @media (max-width: 1024px) {
   .container {
     /* Дополнительный класс для обозначения отступов слева и справа от краев страницы */
