--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -33,11 +33,15 @@
   width: 100%;
 }
 
+
 .header-nav__item {
   font-size: 20px;
   font-weight: 500;
   color: var(--text-main);
-  transition: 0.3s;
+  transition: border 0.3s;
+  /* задаем прозрачную границу снизу, чтобы не было эффекта 
+  поднятия текста при наведении
+  */
   border-bottom: 2px solid #b8b8b800;
   padding-bottom: 5px;
   margin-bottom: -7px;
@@ -45,6 +49,7 @@
 }
 
 .header-nav__item:hover {
+  /* меняем цвет на нужный */
   border-bottom: 2px solid #b8b8b8;
 }
 
@@ -53,6 +58,7 @@
   gap: 31px;
 }
 
+/* общий блок переключателя темы */
 .lightmode {
   display: block;
   width: 50px;
@@ -67,6 +73,7 @@
 
 }
 
+/* кружочк */
 .switcher {
   width: 18px;
   height: 18px;
@@ -75,16 +82,20 @@
   transition: 0.5s;
 }
 
+/* скрыыаем чекбокс */
 #lightmode {
   display: none;
 }
 
+/* если чекбокс отмечен, ищем соседний элемент
+с классом switcher и передивагем его по оси X */
 #lightmode:checked~.lightmode .switcher {
   transform: translateX(20px);
 }
 
 
-
+/* медаапросами скрываем ненужные элементы на 
+мобильных устройствах */
 @media (max-width: 768px) {
 
   .header-nav,
